# gemini

./: .gitignore  CMakeLists.txt  TODO  make_package  waf  wscript
debian/: changelog  changelog.in  control  copyright  rules  wscript_build
lib/: CMakeLists.txt  File.vala  collection.vala  configuration.vala  freighter.vala  hauler.vala  layout-fullscreen.vala  layout-tile.vala  layout.vala  tag.vala  terminal.vala  wscript_build
lib/examples/: terminal-window.vala  tile-layout-window.vala  wscript_build
lib/test/: test-collection.vala  test-copy.vala  test-freighter.vala  test-hauler.vala  test-layout-fullscreen.vala  test-layout-tile.vala  test-terminal.vala  wscript_build
share/: CMakeLists.txt  gemini.desktop  gemini.rc  wscript_build
src/: CMakeLists.txt  config.vapi  fullscreen-layout.vala  gemini-terminal.vala  layout.vala  light.vala  search.vala  terminal.vala  tile-box.vala  tile-layout.vala  window.vala  wscript_build
src/util/: File.vala  wscript_build
src2/: window.vala  wscript_build
src2/util/: wscript_build
tests/: CMakeLists.txt  test-freighter.vala  test-hauler.vala  test-layout-tile.vala  test-terminal.vala  wscript_build
